// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class x {
  /**
  * Set of default settings to be applied to model fetch calls in DAO layer.
  */
  static get defaultSettings() {
  }
}

=====================================output=====================================
class x {
  /**
   * Set of default settings to be applied to model fetch calls in DAO layer.
   */
  static get defaultSettings() {}
}

================================================================================
`;

exports[`class-property.js [espree] format 1`] = `
"Unexpected token = (4:5)
  2 |   f(/* ... */) {}
  3 |   f() /* ... */ {}
> 4 |   f = (/* ... */) => {};
    |     ^
  5 |   static f(/* ... */) {};
  6 |   static f = (/* ... */) => {};
  7 |   static f = function(/* ... */) {};"
`;

exports[`class-property.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
  f(/* ... */) {}
  f() /* ... */ {}
  f = (/* ... */) => {};
  static f(/* ... */) {};
  static f = (/* ... */) => {};
  static f = function(/* ... */) {};
  static f = function f(/* ... */) {};
}

=====================================output=====================================
class Foo {
  f(/* ... */) {}
  f() /* ... */ {}
  f = (/* ... */) => {};
  static f(/* ... */) {}
  static f = (/* ... */) => {};
  static f = function (/* ... */) {};
  static f = function f(/* ... */) {};
}

================================================================================
`;

exports[`empty_paren_comment.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
let f1 = (/* ... */) => {}
(function (/* ... */) {})(/* ... */)
function f2(/* ... */) {}

const obj = {
  f(/* ... */) {},
  f: (/* ... */) => {},
  f: function(/* ... */) {},
  f: function f(/* ... */) {}
}

f(/* ... */);
f(a, /* ... */);
f(a, /* ... */ b);
f(/* ... */ a, b);

let f3 = () => import(a /* ... */);
let f4 = () => doThing(a, /* ... */ b);

=====================================output=====================================
let f1 = (/* ... */) => {};
(function (/* ... */) {})(/* ... */);
function f2(/* ... */) {}

const obj = {
  f(/* ... */) {},
  f: (/* ... */) => {},
  f: function (/* ... */) {},
  f: function f(/* ... */) {},
};

f(/* ... */);
f(a /* ... */);
f(a, /* ... */ b);
f(/* ... */ a, b);

let f3 = () => import(a /* ... */);
let f4 = () => doThing(a, /* ... */ b);

================================================================================
`;
